--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,6 +20,7 @@ const posts = (await getCollection('blog')).sort(
 				width: 960px;
 			}
 			ul {
+				width: 100%;
 				display: flex;
 				flex-wrap: wrap;
 				gap: 2rem;
@@ -28,29 +29,29 @@ const posts = (await getCollection('blog')).sort(
 				padding: 0;
 			}
 			ul li {
-				width: calc(50% - 1rem);
+				width: 100%;
+				border-bottom: solid 1px rgb(var(--gray));
 			}
 			ul li * {
 				text-decoration: none;
 				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
 			}
 			ul li img {
 				margin-bottom: 0.5rem;
 				border-radius: 12px;
 			}
 			ul li a {
-				display: block;
+				display: flex;
+				justify-content: space-between;
+				gap: 1rem;
+				padding-bottom: 1.5rem;
+			}
+			ul li a div h4 {
+				line-height: 1.3;
+				display: -webkit-box;
+				overflow: hidden;
+				-webkit-line-clamp: 2;
+				-webkit-box-orient: vertical;
 			}
 			.title {
 				margin: 0;
@@ -71,16 +72,15 @@ const posts = (await getCollection('blog')).sort(
 			@media (max-width: 720px) {
 				ul {
 					gap: 0.5em;
-				}
-				ul li {
 					width: 100%;
-					text-align: center;
 				}
-				ul li:first-child {
-					margin-bottom: 0;
+				ul li * {
+					width: 100%;
 				}
-				ul li:first-child .title {
-					font-size: 1.563em;
+				ul li a {
+					flex-direction: column;
+					align-items: center;
+					padding-top: 1rem;
 				}
 			}
 		</style>
@@ -94,11 +94,13 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
+									<div>
+										<p class="date">
+											<FormattedDate date={post.data.pubDate} />
+										</p>
+										<h4 class="title">{post.data.title}</h4>
+									</div>
+									<img width={360} height={360} src={post.data.heroImage} alt="" />
 								</a>
 							</li>
 						))
