--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,12 @@
 ---
 ---
-<div class="nav-links">
-  <a href="/">Home</a>
-  <a href="/about">About</a>
-  <a href="/blog">Blog</a>
-  <a href="/tags/">タグ</a>
+<div class="header">
+  <div class="header__title">
+    <a href="/">Kotonayo</a>
+  </div>
+  <div class="header__menu">
+    <a href="/blog">Posts</a>
+    <a href="/tags">Tags</a>
+    <a href="https://github.com/koto74/astro-homepage">GitHub</a>
+  </div>
 </div>
