--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,11 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
+import Layout from '../layouts/Layout.astro'
 const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "私のAstro学習ブログ";
 ---
-<BaseLayout pageTitle={pageTitle}>
+<Layout pageTitle={pageTitle}>
   <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
   <ul>
      {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
   </ul>
-</BaseLayout>
+</Layout>
