--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,38 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Home Page";
+import Layout from '../layouts/Layout.astro';
+
+const pageTitle = "Astro | 私について";
+const identity = {
+  firstName: "サラ",
+  country: "カナダ",
+  occupation: "技術ライター",
+  hobbies: ["写真", "バードウォッチング", "野球"],
+};
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "ドキュメントの執筆"];
+const happy = true;
+const finished = false;
+const goal = 3;
+const skillColor = "navy";
 ---
-<BaseLayout pageTitle={pageTitle}>
-  <h2>私の素晴らしいブログのサブタイトル</h2>
-</BaseLayout>
+<Layout pageTitle={pageTitle}>
+
+  <p>私はAstroの入門チュートリアルを進めています。これは私のウェブサイトの2番目のページで、自分で作った初めてのページです！</p>
+
+  <p>このサイトはチュートリアルを進めるにつれて更新されていきます。定期的にチェックして、私の旅の様子を見に来てください！</p>
+  <p>以下は私に関するいくつかの事実です。</p>
+<ul>
+  <li>私の名前は{identity.firstName}です。</li>
+  <li>{identity.country}に住んでおり、{identity.occupation}として働いています。</li>
+  {identity.hobbies.length >= 2 &&
+    <li>私の2つの趣味は{identity.hobbies[0]}と{identity.hobbies[1]}です。</li>
+  }
+</ul>
+<p>私のスキルは以下の通りです。</p>
+<ul>
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
+</ul>
+{happy && <p>I am happy to be learning Astro! Astroを学べて幸せです！</p>}
+
+{finished && <p>I finished this tutorial! このチュートリアルを終えました！</p>}
+ 
+</Layout>
