--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
+import Layout from '../../layouts/Layout.astro';
 const allPosts = await Astro.glob("../posts/*.md");
 const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 const pageTitle = "タグインデックス";
@@ -23,10 +23,10 @@ const pageTitle = "タグインデックス";
     background-color: #F8FCFD;
   }
 </style>
-<BaseLayout pageTitle={pageTitle}>
+<Layout pageTitle={pageTitle}>
 <div class="tags">
   {tags.map((tag) => (
     <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
   ))}
 </div>
-</BaseLayout>
+</Layout>
