--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-const allPosts = await Astro.glob("../posts/*.md");
-const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+import { getUniqueTags } from '@/data/post';
+
+const tags: string[] = await getUniqueTags();
 const pageTitle = "タグインデックス";
 ---
 <style>
