feat: add tags in blog page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
     <a href="/">Kotonayo</a>
   </div>
   <div class="header__menu">
-    <a href="/blog">Posts</a>
+    <a href="/blog">Blog</a>
     <a href="/tags">Tags</a>
     <a href="https://github.com/koto74/astro-homepage">GitHub</a>
   </div>
