--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,26 @@
 ---
-import { getAllPosts } from '@/data/post';
+import { getAllPosts, getUniqueTags } from '@/data/post';
 import Layout from '@/layouts/Layout.astro'
 const allPosts = await getAllPosts();
-const pageTitle = "私のAstro学習ブログ";
+const allTags = await getUniqueTags();
+const pageTitle = "Blog";
 ---
 <Layout pageTitle={pageTitle}>
-  <p>ここには、私がAstroを学んでいく旅の様子を投稿します。</p>
+  <section>
+    <h2>Tags</h2>
+    <ul class="tags">
+      {allTags.map((tag) => (
+        <li class="tag"><a href={`/tags/${tag}`}>{tag}</a></li>
+      ))}
+    </ul>
+  </section>
+  <section>
+
+    <h2>Posts</h2>
   <ul>
      {allPosts.map((post) => (
       <li><a href={`/posts/${post.slug}`}>{post.data.title}</a></li>
      ))}
   </ul>
+  </section>
 </Layout>
