--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 /* include css */
 @import url("Components/header.css");
+@import url("Components/tag.css");
 
 /* Global styles */
 :root {
@@ -10,6 +11,8 @@
   --text-light: #1e1e2e;
   --text-link-dark: #78c2ad;
   --text-link-light: #ff008b;
+  --tag-dark: #407ca2;
+  --tag-light: #b51f3d;
   --underline: #375a7f;
   --body: "Zen Maru Gothic", serif;
 }
