chore: data dir rename to utils

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-import { getAllPosts, getUniqueTags } from '@/data/post';
+import { getAllPosts, getUniqueTags } from '@/utils/post';
 import Layout from '@/layouts/Layout.astro'
 const allPosts = await getAllPosts();
 const allTags = await getUniqueTags();
