--- a/src/styles/Components/tag.css
+++ b/src/styles/Components/tag.css
@@ -1,13 +1,5 @@
-.tags {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 0;
-  gap: 1rem;
-}
-
 .tag {
-  display: flex;
+  display: inline-block;
   padding: 0.3rem 0.5rem;
   background-color: var(--tag-light);
   border-radius: 7px;
@@ -15,5 +7,4 @@
 
 .tag a {
   color: white;
-  text-decoration: none;
 }
