--- a/src/styles/Components/header.css
+++ b/src/styles/Components/header.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1.5rem;
-  color: var(--text-light);
   @container style(--is-mobile) {
     flex-flow: column;
     align-items: center;
@@ -20,4 +19,10 @@
   justify-content: space-between;
   font-size: 1.2rem;
   gap: 1.5rem;
+}
+
+.header * {
+  a {
+    color: var(--text-light);
+  }
 }
