--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="header">
+<header class="header">
   <div class="header__title">
     <a href="/">Kotonayo</a>
   </div>
@@ -9,4 +9,4 @@
     <a href="/tags">Tags</a>
     <a href="https://github.com/koto74/astro-homepage">GitHub</a>
   </div>
-</div>
+</header>
