--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -1,17 +1,19 @@
 ---
 import PostPreview from '@/components/PostPreview.astro';
+import TagList from './TagList.astro';
 import type { CollectionEntry } from 'astro:content';
 
 interface Props {
   postList: CollectionEntry<"post">[];
+  isTagsVisible: boolean;
 };
 
-const { postList } = Astro.props;
+const { postList, isTagsVisible } = Astro.props;
 ---
 <ul class="posts">
   {postList.map((post) => (
     <li>
-      <PostPreview post={post} />
+      <PostPreview post={post} isTagsVisible={isTagsVisible} />
     </li>
   ))}
 </ul>
