--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,6 +16,6 @@ const pageTitle = "Blog";
   </section>
   <section>
     <h2>Posts</h2>
-    <PostList postList={allPosts} />
+    <PostList postList={allPosts} isTagsVisible={true} />
   </section>
 </Layout>
