--- a/src/styles/Components/header.css
+++ b/src/styles/Components/header.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 1.5rem;
+  margin-bottom: 2rem;
   @container style(--is-mobile) {
     flex-flow: column;
     align-items: center;
