--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -3,7 +3,8 @@ import Layout from './Layout.astro';
 
 const { frontmatter } = Astro.props;
 ---
-<Layout pageTitle={frontmatter.title}>
+<Layout>
+  <h1>{frontmatter.title}</h1>
   <p><em>{frontmatter.description}</em></p>
   <p>{frontmatter.publishDate.slice(0,10)}</p>
 
