--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,8 @@ const identity = {
 const allPosts = await getAllPosts()
 const blogEntries = allPosts.slice(0, 3)
 ---
-<Layout pageTitle={pageTitle}>
+<Layout>
+  <h1>{pageTitle}</h1>
   <section>
     <p>私はAstroの入門チュートリアルを進めています。これは私のウェブサイトの2番目のページで、自分で作った初めてのページです！</p>
     <p>このサイトはチュートリアルを進めるにつれて更新されていきます。定期的にチェックして、私の旅の様子を見に来てください！</p>
