--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,8 @@
     <a href="/">Kotonayo</a>
   </div>
   <div class="header__menu">
+
+    <a href="/projects">Project</a>
     <a href="/blog">Blog</a>
     <a href="/tags">Tags</a>
     <a href="https://github.com/koto74/astro-homepage">GitHub</a>
