--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ const allPosts = await getAllPosts();
 const sortPosts = sortPostsByDate(allPosts);
 const allTags = await getUniqueTags();
 
-const pageTitle = "Works";
+const pageTitle = "Projects";
 ---
 <Layout>
   <h1>{pageTitle}</h1>
