--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
 @import url("Components/footer.css");
 @import url("Components/tag.css");
 @import url("Components/postPreview.css");
+@import url("Components/project.css");
 
 /* Global styles */
 :root {
@@ -54,6 +55,10 @@ a {
   &:hover {
     opacity: 0.7;
   }
+}
+
+p {
+  overflow-wrap: normal;
 }
 
 * {
