--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -3,6 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import BlogPost from '../../components/BlogPost.astro';
 
 import { getAllPosts, getUniqueTags } from '@/utils/post';
+import PostList from '@/components/PostList.astro';
 
 export const getStaticPaths = (async () => {
   const allPosts = await getAllPosts();
@@ -17,7 +18,6 @@ export const getStaticPaths = (async () => {
   });
 });
 
-
 interface Tag {
   tag: string;
 }
@@ -26,13 +26,6 @@ const { tag } = Astro.params as Tag;
 const { posts } = Astro.props;
 ---
 <Layout>
-  <h1>{tag}</h1>
-  <p>{tag}のタグが付いた記事</p>
-  <ul>
-    {posts.map((post) => (
-      <li>
-        <BlogPost url={`/posts/${post.slug}`} title={post.data.title} />
-      </li>
-    ))}
-  </ul>
+  <h1 class="tagTitle"><a href="/tags">Tag</a> -> {tag}</h1>
+  <PostList postList={posts} isTagsVisible={false} />
 </Layout>
