--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,34 +1,12 @@
 ---
+import TagList from '@/components/TagList.astro';
 import Layout from '../../layouts/Layout.astro';
 import { getUniqueTags } from '@/utils/post';
 
-const tags: string[] = await getUniqueTags();
-const pageTitle = "タグインデックス";
+const pageTitle = "Tags";
+const allTags = await getUniqueTags();
 ---
-<style>
-  a {
-    color: #00539F;
-  }
-
-  .tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .tag {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
-    font-size: 1.15em;
-    background-color: #F8FCFD;
-  }
-</style>
 <Layout>
 <h1>{pageTitle}</h1>
-<div class="tags">
-  {tags.map((tag) => (
-    <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
-  ))}
-</div>
+<TagList tagList={allTags} />
 </Layout>
