--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 /* include css */
 @import url("layouts/blog.css");
+@import url("layouts/tag.css");
 @import url("Components/header.css");
 @import url("Components/footer.css");
 @import url("Components/tag.css");
