feat: post detail style

--- a/src/styles/layouts/post.css
+++ b/src/styles/layouts/post.css
@@ -2,22 +2,30 @@
   max-width: 100%;
 }
 
-/* コードブロックのスタイル */
-.postContent pre,
-.postContent code {
-  /*
-  background-color: #f7f7f7;
-  border: 1px solid #ccc;
-  display: block;
-  padding: 10px;
-  overflow-x: auto;
-  font-family: 'Courier New', Courier, monospace;
-  */
+.postContent ul {
+  list-style: disc;
+  padding-left: 20px;
 }
 
-.postContent code {
-  display: inline-block;
-  padding: 2px 4px;
-  margin: 0 2px;
-  font-size: 90%;
+.postContent pre {
+  border-radius: 5px;
+}
+.postContent pre code {
+  padding: 1em;
+  overflow-x: auto;
+  display: block;
+  white-space: pre;
+  word-wrap: normal;
+  line-height: 1.5;
+  font-size: 0.9em;
+}
+
+.postContent p code {
+  background-color: #d3d3d3;
+  font-weight: bold;
+  border-radius: 3px;
+  padding: 0.2em 0.4em;
+  font-family: 'Consolas', 'Monaco', 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 0.9em;
+  white-space: nowrap;
 }
