--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -17,11 +17,11 @@ type SiteConfig = {
 
 const siteConfig: SiteConfig = {
   // Used as both a meta property (src/components/BaseHead.astro L:31 + L:49) & the generated satori png (src/pages/og-image/[slug].png.ts)
-	author: "Chris Williams",
+	author: "siteconfig author",
 	// Meta property used to construct the meta title property, found in src/components/BaseHead.astro L:11
-	title: "Astro Theme Cactus",
+	title: "siteconfig title",
 	// Meta property used as the default description meta property
-	description: "An opinionated starter theme for Astro",
+	description: "siteconfig description",
 	// HTML lang property, found in src/layouts/Base.astro L:18
 	lang: "en-GB",
 	// Meta property, found in src/components/BaseHead.astro L:42
