--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,24 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseHead from '@/components/BaseHead.astro';
+import Header from '@/components/Header.astro';
+import Footer from '@/components/Footer.astro';
 import '../styles/global.css';
+
+type SiteMeta = {
+	title: string;
+	description?: string;
+	ogImage?: string | undefined;
+	articleDate?: string | undefined;
+};
+
+interface Props {
+  meta: SiteMeta;
+}
+
+const {
+  meta: { title, description, ogImage, articleDate },
+} = Astro.props
+
 ---
 <html lang="ja">
   <head>
@@ -14,6 +31,7 @@ import '../styles/global.css';
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
   </head>
+  <BaseHead title={title} description={description} articleDate={articleDate} ogImage={ogImage} />
   <body style="display: flex;">
     <Header />
     <main>
