--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,10 @@ const meta = {
       デザイン修正案があれば、是非X(Twitter)でDMでお知らせください(小声)
       </p>
   </article>
+  <article>
+    <h2>hobby</h2>
+    <p>お絵描き、プログラミング、読書</p>
+  </article>
   <section>
     <h2>Posts</h2>
     <PostList postList={blogEntries} isTagsVisible={false} />
