--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,12 @@ const meta = {
     <h2>hobby</h2>
     <p>お絵描き、プログラミング、読書</p>
   </article>
+  <article>
+    <h2>skill</h2>
+    <img src="skills/cpp.svg" alt="cpp" width="20" height="20" >
+    <img src="skills/ts.svg" alt="typescript" width="20" height="20" >
+    <img src="skills/react.svg" alt="react" width="20" height="20" >
+  </article>
   <section>
     <h2>Posts</h2>
     <PostList postList={blogEntries} isTagsVisible={false} />
