--- a/src/styles/layouts/post.css
+++ b/src/styles/layouts/post.css
@@ -25,7 +25,7 @@
   font-weight: bold;
   border-radius: 3px;
   padding: 0.2em 0.4em;
-  font-family: 'Consolas', 'Monaco', 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: "Consolas", "Monaco", "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 0.9em;
   white-space: nowrap;
 }
