--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 /* include css */
+@import url("layouts/index.css");
 @import url("layouts/blog.css");
 @import url("layouts/post.css");
 @import url("layouts/tag.css");
@@ -7,6 +8,12 @@
 @import url("Components/tag.css");
 @import url("Components/postPreview.css");
 @import url("Components/project.css");
+
+/* CSS Reset */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 /* Global styles */
 :root {
