chore: change name

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,5 +2,5 @@
 import Social from './Social.astro';
 ---
 <footer>
-  &copy; 2024 Kotonayo. All rights reserved.
+  &copy; 2024 Rieogen. All rights reserved.
 </footer>
