--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,12 +2,12 @@
 ---
 <header class="header">
   <div class="header__title">
-    <a href="/">Kotonayo</a>
+    <a href="/">Rieogen</a>
   </div>
   <div class="header__menu">
 
+    <a href="/">Top</a>
     <a href="/projects">Project</a>
     <a href="/blog">Blog</a>
-    <a href="https://github.com/koto74/astro-homepage">GitHub</a>
   </div>
 </header>
