chore: change title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,11 +68,11 @@ const meta = {
     <p>デザイン修正案があれば、是非X(Twitter)でDMでお知らせください(小声)</p>
   </article>
   <section class="introduction__box">
-    <h2>hobby</h2>
+    <h2>Hobby</h2>
     <p>お絵描き、プログラミング、読書</p>
   </section>
   <section class="introduction__box">
-    <h2>skills</h2>
+    <h2>Skills</h2>
     <div class="skill__icons">
       {skills.map((skill) => (
         <div>
