chore: setup style

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,7 +17,7 @@ const meta = {
 ---
 <Layout meta={meta}>
   <h1>{pageTitle}</h1>
-  <section>
+  <section class="tags__box">
     <h2>Tags</h2>
     <TagList tagList={allTags} />
   </section>
