--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,8 +46,8 @@ const allProjects = await getAllProjects();
 const projectEntries = allProjects.slice(0, 3)
 // TODO: setting meta
 const meta = {
-	description: "test",
-	title: "test",
+	title: "Rieogen - Homepage",
+	description: "This is Rieogen's Homepage.",
 };
 ---
 <Layout meta={meta}>
