--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -51,8 +51,7 @@ type SiteMeta = {
 type Props = SiteMeta
 
 const { title, description, ogImage, articleDate } = Astro.props;
-const titleSeparator = "•";
-const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
+const siteTitle = `${title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url).href;
 ---
