--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,10 @@ const skills = [
     icon: "https://cdn.svgporn.com/logos/react.svg",
   },
   {
+    name: "Astro",
+    icon: "https://cdn.svgporn.com/logos/astro-icon.svg",
+  },
+  {
     name: "Docker",
     icon: "https://cdn.svgporn.com/logos/docker-icon.svg",
   },
@@ -60,12 +64,9 @@ const meta = {
     <p>Rieogenです。読み方がわからないので、Rieと読んでください。</p>
     <p>神奈川在住、東京のWeb系企業で働いています。</p>
     <p>高専出身で、高専時代はプロコンに出場したりしていました。</p>
-    <p>技術書、小説などの本を読むのが好きです。おすすめの本があれば教えてください。</p>
-    <p>休日は大抵パソコンと向き合っていますが、外に出る時はカメラを持ち写真を撮ることが好きです。</p>
-    <p>昔ヘルニアを患った過去があるので、ヘルニアトークができます。手術とても痛かった...</p>
-    <br>
-    <p>このサイトはデザインセンスのない私が趣味で作っているため、見ずらいかもしれませんがお許しください。</p>
-    <p>デザイン修正案があれば、是非X(Twitter)でDMでお知らせください(小声)</p>
+    <p>技術書、小説などの本を読むのが好きなので、おすすめの本があれば教えてください。</p>
+    <p>休日は大抵パソコンと向き合ってイラストを描いたりしていますが、外に出る時はカメラを持ち写真を撮ることが好きです。</p>
+    
   </article>
   <section class="introduction__box">
     <h2>Hobby</h2>
