fix: blog page Header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 ---
 <header class="header">
   <div class="header__title">
-    <a href="/"><img src="title.png"></img></a>
+    <a href="/"><img src="/title.png"></img></a>
   </div>
   <div class="header__menu">
 
