--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -52,8 +52,8 @@ type Props = SiteMeta
 
 const { title, description, ogImage, articleDate } = Astro.props;
 const siteTitle = `${title}`;
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const socialImageURL = new URL(ogImage ? ogImage : "/ogp_main.png", Astro.url).href;
+const canonicalURL = new URL(Astro.url.pathname, 'https://rieogen.netlify.app');
+const socialImageURL = new URL(ogImage ? ogImage : "/ogp_main.png", canonicalURL).href;
 ---
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
