--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<header class="header" id="header-main">
+<header class="header">
   <div class="header__title">
     <a href="/"><img src="/title.png" width="100" height="44" /></a>
   </div>
@@ -8,14 +8,17 @@
     <a href="/">Top</a>
     <a href="/projects">Project</a>
     <a href="/blog">Blog</a>
-    <mobile-button>
-      <button>
-        <img src="/icons/cross.svg" height="20" />
-        <img src="/icons/menu-burger.svg" height="20">
-      </button>
-    </mobile-button>
   </div>
-  <div>
+  <mobile-button>
+    <button>
+      <img src="/icons/cross.svg" height="20" />
+      <img src="/icons/menu-burger.svg" height="20">
+    </button>
+  </mobile-button>
+  <div class="header__menu--mobile" id="header-menu">
+    <a href="/">Top</a>
+    <a href="/projects">Project</a>
+    <a href="/blog">Blog</a>
   </div>
 </header>
 
@@ -23,12 +26,12 @@
   import { toggleClass } from '@/utils/domElement';
 
   class MobileNavButton extends HTMLElement {
-    private headerElement: HTMLElement;
+    private headerMenuElement: HTMLElement;
     private isMenuOpen: boolean;
     private mobileButtonElement: HTMLElement;
 
     toggleMobileMenu = () => {
-      toggleClass(this.headerElement, 'menu--open');
+      toggleClass(this.headerMenuElement, 'header__menu--open');
       this.isMenuOpen = !this.isMenuOpen;
       console.log(this.isMenuOpen);
       this.mobileButtonElement.setAttribute('aria-expanded', this.isMenuOpen.toString());
@@ -36,7 +39,7 @@
 
     constructor() {
       super();
-      this.headerElement = document.getElementById('header-main') as HTMLElement;
+      this.headerMenuElement = document.getElementById('header-menu') as HTMLElement;
       this.mobileButtonElement = this.querySelector('button') as HTMLElement;
       this.isMenuOpen = false;
 
