--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,7 +23,7 @@
   --text-dark: #f0f8f2;
   --text-light: #1e1e2e;
   --text-link-dark: #78c2ad;
-  --text-link-light: #ff008b;
+  --text-link-light: #ee336b;
   --tag-dark: #407ca2;
   --tag-light: #b51f3d;
   --underline: #375a7f;
