--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -43,13 +43,18 @@
 
     connectedCallback() {
       this.headerMenuElement = document.getElementById('header-menu') as HTMLElement;
-      this.mobileButtonElement = this.querySelector('button') as HTMLElement;
 
-      if (this.mobileButtonElement) {
-        this.mobileButtonElement.addEventListener('click', this.toggleMobileMenu);
-      } else {
-        console.error('Button element not found');
-      }
+      const observer = new MutationObserver(() => {
+        this.mobileButtonElement = this.querySelector('button') as HTMLElement;
+        if (this.mobileButtonElement) {
+          this.mobileButtonElement.addEventListener('click', this.toggleMobileMenu);
+          observer.disconnect();
+        } else {
+          console.error('Button element not found');
+        }
+      });
+
+      observer.observe(this, { childList: true, subtree: true });
     }
   }
 
