--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,11 +10,10 @@
     <a href="/blog">Blog</a>
   </div>
   <mobile-button>
-    <button>
+    <button type="button">
       <img class="mobile-button__icon--burger" src="/icons/menu-burger.svg" height="20">
       <img class="mobile-button__icon--cross" src="/icons/cross.svg" height="15" />
     </button>
-  </mobile-button>
   <div class="header__menu--mobile" id="header-menu">
     <a href="/">Top</a>
     <a href="/projects">Project</a>
