--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,45 +9,15 @@
     <a href="/projects">Project</a>
     <a href="/blog">Blog</a>
   </div>
-  <mobile-button>
-    <button type="button">
+  <details class="mobile__menu">
+    <summary class="mobile-button">
       <img class="mobile-button__icon--burger" src="/icons/menu-burger.svg" height="20">
       <img class="mobile-button__icon--cross" src="/icons/cross.svg" height="15" />
-    </button>
-  </mobile-button>
-  <div class="header__menu--mobile" id="header-menu">
-    <a href="/">Top</a>
-    <a href="/projects">Project</a>
-    <a href="/blog">Blog</a>
-  </div>
+    </summary>
+    <div class="header__menu--mobile" id="header-menu">
+      <a href="/">Top</a>
+      <a href="/projects">Project</a>
+      <a href="/blog">Blog</a>
+    </div>
+  </details>
 </header>
-
-<script>
-  console.log('Header component loaded')
-  import { toggleClass } from '@/utils/domElement';
-
-  class MobileNavButton extends HTMLElement {
-    private headerMenuElement: HTMLElement;
-    private isMenuOpen: boolean;
-    private mobileButtonElement: HTMLElement;
-
-    toggleMobileMenu = () => {
-      toggleClass(this.headerMenuElement, 'header__menu--open');
-      this.isMenuOpen = !this.isMenuOpen;
-      console.log(this.isMenuOpen);
-      this.mobileButtonElement.setAttribute('aria-expanded', this.isMenuOpen.toString());
-    }
-
-    constructor() {
-      super();
-      this.headerMenuElement = document.getElementById('header-menu') as HTMLElement;
-      this.mobileButtonElement = this.querySelector('button') as HTMLElement;
-      this.isMenuOpen = false;
-
-      this.mobileButtonElement.addEventListener('click', this.toggleMobileMenu);
-    }
-  }
-
-  customElements.define('mobile-button', MobileNavButton);
-  console.log('MobileNavButton component loaded')
-</script>
