--- a/src/styles/Components/header.css
+++ b/src/styles/Components/header.css
@@ -34,6 +34,13 @@
   }
 }
 
+.mobile__menu {
+  display: none;
+  @container style(--is-mobile) {
+    display: block;
+  }
+}
+
 .header__menu--mobile {
   display: none;
   position: absolute;
@@ -52,43 +59,37 @@
   font-weight: bold;
 }
 
-.header__menu--mobile.header__menu--open {
+.header__menu--mobile {
   display: none;
   @container style(--is-mobile) {
     display: flex;
     flex-direction: column;
     text-align: end;
-    gap: 1rem; 
+    gap: 1rem;
   }
 }
 
-mobile-button {
+.mobile-button {
   display: none;
   @container style(--is-mobile) {
     display: block;
+    cursor: pointer;
   }
-}
-
-mobile-button button {
-  width: 30px;
-  height: 30px;
-  border: none;
-  background: none;
-  transition: transform 0.3s ease;
 }
 
 .mobile-button__icon--cross {
   display: none;
 }
 
-header:has(.header__menu--open) .mobile-button__icon--burger {
+details[open] .mobile-button__icon--burger {
   display: none;
 }
 
-header:has(.header__menu--open) .mobile-button__icon--cross {
+details[open] .mobile-button__icon--cross {
   display: inline;
 }
 
 .mobile-button__icon--cross {
-  filter: brightness(0) saturate(100%) invert(28%) sepia(97%) saturate(6706%) hue-rotate(346deg) brightness(102%) contrast(104%);
+  filter: brightness(0) saturate(100%) invert(28%) sepia(97%) saturate(6706%) hue-rotate(346deg) brightness(102%)
+    contrast(104%);
 }
